# process_blueprint

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  app.py  enterprise_process_analysis_knowledge_framework.md  mining_engine.py  platform_generator.html  pyproject.toml  requirements.txt  research_agent.py
backend/: api.py
docs/: ELITE_ROADMAP.md  HOW_IT_WORKS.md  METHODOLOGY_MAP.md  PHASES.md  TRACKING.md
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/briefs/: page.tsx
frontend/app/engagements/: page.tsx
frontend/app/knowledge/: page.tsx
frontend/app/runs/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/dashboard/: AiRiskPanel.tsx  BenchmarkCard.tsx  (+12 more)
frontend/lib/: api.ts  format.ts  graph.ts  health.ts  seed.ts  settings.ts  types.ts
scripts/: generate_enterprise_log.py  ingest_knowledge.py  run_freight_demo.py  run_phase1.py  run_phase2.py
src/process_blueprint/: __init__.py  ai_risk.py  benchmarks.py  compliance.py  conformance.py  discovery.py  discovery_completeness.py  engine.py  facts.py  ingest.py  insights.py  performance.py  persistence.py  redesign.py  report.py  roi.py  visualize.py
supabase/migrations/: 0001_init.sql  0002_knowledge_retrieval.sql
tests/: conftest.py  enterprise_log.py  freight_log.py  sample_log.py  test_ai_risk.py  test_brief.py  test_compliance.py  test_elite_e1.py  test_engine_e2e.py  test_enterprise.py  test_freight.py  test_ingest.py  test_knowledge.py  test_persistence.py  test_providers.py  test_redesign.py  test_report.py  test_roi.py
(+31 files in other folders)
