[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "process-blueprint"
version = "0.1.0"
description = "Internal process-mining & consulting-intelligence engine"
requires-python = ">=3.10"
dependencies = [
    "pm4py>=2.7,<3",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["ignore::PendingDeprecationWarning"]
